--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -2,12 +2,16 @@
 <html>
     <head>
         <title>raspivideo</title>
-        
+
+	<!--
         <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
         <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-        
-        <script src="/static/js/main.js"></script>
-        
+	-->
+
+	<script src="/static/js/main.js"></script>
+	<script src="/static/js/lib/jquery-2.0.3.min.js"></script>
+	<script src="/static/js/lib/jquery-2.0.3.min.map"></script>
+
     </head>
 
     <body>
