--- a/src/app/templates/main.html
+++ b/src/app/templates/main.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html>
     <head>
     <title>raspivideo</title>
 
-    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-    <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+    <script src="http://code.jquery.com/jquery-migrate-1.2.1.js"></script>
 
     <script src="/static/js/main.js"></script>
     </head>
